--- a/Projeto-3- Responsive Homepage/index.html
+++ b/Projeto-3- Responsive Homepage/index.html
@@ -25,6 +25,7 @@
             <li><a href="#">Sobre nós</a></li>
             <li><a href="#">Promoções</a></li>
             <li><a href="#">Newsletter</a></li>
+            <li class="menu_icon"><img src="images/menu_icon.png" alt="menu icon"></li>
           </ul>
         </nav>
       </div>
