hero image reponsive

--- a/Projeto-3- Responsive Homepage/index.html
+++ b/Projeto-3- Responsive Homepage/index.html
@@ -32,7 +32,14 @@
     </header>
     
     <section class="hero">
-      <img src="images/Hero_image.jpg" alt="Hero image = Smartwatch" />
+
+      <picture>
+        <source srcset="Hero_Mobile.jpg" media="(max-width: 576px)">
+        <source srcset="Hero_Tablet.jpg" media="(max-width: 960px)">
+        <source srcset="Hero_Desktop.jpg" media="(max-width: 1440px)">
+        <img src="images/Hero_Large_Desktop.jpg" alt="Hero image = Smartwatch" />
+      </picture>
+
 
       <div class="hero-content">
         <div class="container">
