product section - responsive

--- a/Projeto-3- Responsive Homepage/index.html
+++ b/Projeto-3- Responsive Homepage/index.html
@@ -34,13 +34,11 @@
     <section class="hero">
 
       <picture>
-        <source srcset="Hero_Mobile.jpg" media="(max-width: 576px)">
-        <source srcset="Hero_Tablet.jpg" media="(max-width: 960px)">
-        <source srcset="Hero_Desktop.jpg" media="(max-width: 1440px)">
-        <img src="images/Hero_Large_Desktop.jpg" alt="Hero image = Smartwatch" />
+        <source media="(max-width: 576px)" srcset="images/Hero_Mobile.jpg">
+        <source media="(max-width: 960px)" srcset="images/Hero_Tablet.jpg">
+        <source media="(max-width: 1440px)" srcset="images/Hero_Desktop.jpg">
+        <img src="images/Hero_image.jpg" alt="Hero image = Smartwatch" />
       </picture>
-
-
       <div class="hero-content">
         <div class="container">
           <h1>Explore our new smart watch series</h1>
