--- a/Projeto-3- Responsive Homepage/index.html
+++ b/Projeto-3- Responsive Homepage/index.html
@@ -16,15 +16,17 @@
     <header>
       <div class="container">
         <section class="logo">
-          <strong>Your</strong>
-          <span class="blue-dot"></span>
-          <span>Logo</span>
+          <a href="index.html">
+            <strong>Your</strong>
+            <span class="blue-dot"></span>
+            <span>Logo</span>
+          </a>
         </section>
         <nav>
           <ul>
             <li><a href="#">Sobre nós</a></li>
-            <li><a href="#">Promoções</a></li>
-            <li><a href="#">Newsletter</a></li>
+            <li><a href="#best-sellers-section">Promoções</a></li>
+            <li><a href="#newsletter-section">Newsletter</a></li>
             <li class="menu_icon"><img src="images/menu_icon.png" alt="menu icon"></li>
           </ul>
         </nav>
@@ -50,7 +52,7 @@
         </div>
       </div>
     </section>
-    <section class="best-sellers">
+    <section class="best-sellers" id="best-sellers-section">
       <h2>Best Selles</h2>
       <hr />
       <div class="product-slider">
@@ -110,7 +112,7 @@
         </div>
       </div>
     </section>
-    <section class="newsletter">
+    <section class="newsletter" id="newsletter-section">
       <h3>Newsletter signup</h3>
       <p>Subscribe now and don't miss a single deal!</p>
       <form>
